# Observacode-Student

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
jupyter-config/nb-config/: observacode_student.json
jupyter-config/server-config/: observacode_student.json
observacode_student/: __init__.py  handlers.py
schema/: plugin.json
src/: handler.ts  index.ts  sharing.ts
